--- a/plotly.html
+++ b/plotly.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Online C.V. - Erfan Faridmoayer, MD</title>
+<title>HW Plotly</title>
 
 <script src="site_libs/header-attrs-2.17/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -350,15 +350,13 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Online C.V. - Erfan Faridmoayer, MD</h1>
+<h1 class="title toc-ignore">HW Plotly</h1>
 
 </div>
 
 
-<div id="introduction" class="section level1">
-<h1>Introduction</h1>
-<p>Welcome to Erfan’s website. In the following pages, you can find more
-information about his work and credentials.</p>
+<div id="plotly" class="section level1">
+<h1>Plotly</h1>
 </div>
 
 
