--- a/about.html
+++ b/about.html
@@ -356,8 +356,41 @@ div.tocify {
 
 
 <p>Erfan was born and raised in Iran. He immigrated to the United States
-after finishing high school, where he continued his higher education.
-You can find his credentials below:</p>
+after finishing high school, where he continued his higher
+education.</p>
+<p><br />
+</p>
+<p>Erfan’s academic publications can be found here: <a
+href="https://www.ncbi.nlm.nih.gov/myncbi/erfan.faridmoayer.2/bibliography/public/">Publications</a></p>
+<p><br />
+</p>
+<div id="credentials" class="section level2 tabset">
+<h2 class="tabset">Credentials</h2>
+<div id="undergraduate-degree" class="section level3">
+<h3>Undergraduate Degree</h3>
+<p>Bachelor of Science<br />
+University of California, Los Angeles<br />
+2012-2015</p>
+</div>
+<div id="medical-school" class="section level3">
+<h3>Medical School</h3>
+<p>Medical Doctorate<br />
+Oakland University William Beaumont School of Medicine<br />
+2016-2020</p>
+</div>
+<div id="residency" class="section level3">
+<h3>Residency</h3>
+<p>General Surgery Residency<br />
+Downstate Health Sciences University<br />
+2020-2022</p>
+</div>
+<div id="graduate-studies" class="section level3">
+<h3>Graduate Studies</h3>
+<p>Masters of Science Candidate<br />
+Columbia University Mailman School of Public Health<br />
+2022-2024</p>
+</div>
+</div>
 
 
 
