--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Online C.V. - Erfan Faridmoayer, MD</title>
+<title>Erfan Faridmoayer, MD</title>
 
 <script src="site_libs/header-attrs-2.17/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -350,16 +350,17 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Online C.V. - Erfan Faridmoayer, MD</h1>
+<h1 class="title toc-ignore">Erfan Faridmoayer, MD</h1>
 
 </div>
 
 
-<div id="introduction" class="section level1">
-<h1>Introduction</h1>
 <p>Welcome to Erfan’s website. In the following pages, you can find more
 information about his work and credentials.</p>
-</div>
+<p><br />
+</p>
+<p><img
+src="https://www.downstate.edu/education-training/fellowship-residency-programs/surgery/_images/residency/faridmoayer.jpg" /></p>
 
 
 
