more erfan details

--- a/about.html
+++ b/about.html
@@ -341,6 +341,12 @@ div.tocify {
      
   </a>
 </li>
+<li>
+  <a href="http://twitter.com/erfanfarid/">
+    <span class="fa fa-brands fa-twitter"></span>
+     
+  </a>
+</li>
       </ul>
     </div><!--/.nav-collapse -->
   </div><!--/.container -->
@@ -356,8 +362,9 @@ div.tocify {
 
 
 <p>Erfan was born and raised in Iran. He immigrated to the United States
-after finishing high school, where he continued his higher
-education.</p>
+after finishing high school, where he continued his higher education. He
+has enjoyed living in California, Michigan, and New York, where he now
+calls home.</p>
 <p><br />
 </p>
 <p>Erfan’s academic publications can be found here: <a
