--- a/index.html
+++ b/index.html
@@ -341,6 +341,12 @@ div.tocify {
      
   </a>
 </li>
+<li>
+  <a href="http://twitter.com/erfanfarid/">
+    <span class="fa fa-brands fa-twitter"></span>
+     
+  </a>
+</li>
       </ul>
     </div><!--/.nav-collapse -->
   </div><!--/.container -->
