bulked up content

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Erfan Faridmoayer, MD</title>
+<title>Welcome</title>
 
 <script src="site_libs/header-attrs-2.17/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -356,17 +356,37 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Erfan Faridmoayer, MD</h1>
+<h1 class="title toc-ignore">Welcome</h1>
 
 </div>
 
 
+<div id="introduction" class="section level1">
+<h1>Introduction</h1>
 <p>Welcome to Erfan’s website. In the following pages, you can find more
 information about his work and credentials.</p>
 <p><br />
 </p>
 <p><img
 src="https://www.downstate.edu/education-training/fellowship-residency-programs/surgery/_images/residency/faridmoayer.jpg" /></p>
+<p><br />
+</p>
+</div>
+<div id="who-is-erfan" class="section level1">
+<h1>Who is Erfan?</h1>
+<p>Erfan was born and raised in Iran. He immigrated to the United States
+after finishing high school, where he continued his higher education. He
+has enjoyed living in California, Michigan, and New York, where he now
+calls home.</p>
+<p><br />
+</p>
+</div>
+<div id="research" class="section level1">
+<h1>Research</h1>
+<p>Erfan is passionate about health outcomes research, particularly in
+the field of cardiovascular diseases. He is also interested in
+translational research on cardiac valve degeneration.</p>
+</div>
 
 
 
