--- a/about.html
+++ b/about.html
@@ -361,16 +361,17 @@ div.tocify {
 </div>
 
 
-<p>Erfan was born and raised in Iran. He immigrated to the United States
-after finishing high school, where he continued his higher education. He
-has enjoyed living in California, Michigan, and New York, where he now
-calls home.</p>
+<p>In the following paragraphs, you can find some information about
+Erfan’s credentials.</p>
 <p><br />
 </p>
+<div id="publications" class="section level2">
+<h2>Publications</h2>
 <p>Erfan’s academic publications can be found here: <a
 href="https://www.ncbi.nlm.nih.gov/myncbi/erfan.faridmoayer.2/bibliography/public/">Publications</a></p>
 <p><br />
 </p>
+</div>
 <div id="credentials" class="section level2 tabset">
 <h2 class="tabset">Credentials</h2>
 <div id="undergraduate-degree" class="section level3">
